--- a/src/app/demo/pages/authentication/login/login.component.html
+++ b/src/app/demo/pages/authentication/login/login.component.html
@@ -4,48 +4,51 @@
       <div class="card my-5">
         <div class="card-body">
           <a href="#" class="d-flex justify-content-center">
-            <img src="assets/images/logo-dark.svg" />
+            <img src="assets/images/logo.png" height="70px" />
           </a>
           <div class="row">
             <div class="d-flex justify-content-center">
               <div class="auth-header">
-                <h2 class="text-secondary mt-5"><b>Hi, Welcome Back</b></h2>
-                <p class="fs-4 mt-2">Enter your credentials to continue</p>
+                <h2 class="text-secondary mt-5"><b>Bienvenidos a Confiedy - Aula Virtual</b></h2>
+                <p class="fs-4 mt-2">Ingresa con:</p>
               </div>
             </div>
           </div>
           <div class="d-grid">
             <button type="button" class="btn mt-2 btn-light-primary bg-light text-muted">
-              <img src="assets/images/authentication/google-icon.svg" />Sign In With Google
+              <img src="assets/images/authentication/google-icon.svg" height="20px" />Iniciar Sesión con Google
+            </button>
+            <button type="button" class="btn mt-2 btn-light-primary bg-light text-muted">
+              <img src="assets/images/authentication/facebook.png" height="20px" />Iniciar Sesión con Facebook
             </button>
           </div>
           <div class="saprator mt-3">
-            <span>or</span>
+            <span>También puedes</span>
           </div>
-          <h5 class="my-4 d-flex justify-content-center"> Sign in with Email address </h5>
+          <h5 class="my-4 d-flex justify-content-center"> Iniciar Sesión con tu correo electrónico.</h5>
           <div class="form-floating mb-3">
-            <input type="email" class="form-control" id="floatingInput" value="info@codedthemes.com" />
-            <label for="floatingInput">Email address / Username</label>
+            <input type="email" class="form-control" id="floatingInput" value="usuario@confiedy.com" />
+            <label for="floatingInput">Correo Electrónico</label>
           </div>
           <div class="form-floating mb-3">
             <input type="password" class="form-control" id="password" value="12345" />
-            <label for="password">Password</label>
+            <label for="password">Contraseña</label>
           </div>
           <div class="d-flex mt-1 justify-content-between">
             <div class="form-check">
               <input class="form-check-input input-primary" type="checkbox" id="customCheckc1" checked="" />
-              <label class="form-check-label text-muted" for="customCheckc1">Remember me</label>
+              <label class="form-check-label text-muted" for="customCheckc1">Recuérdame</label>
             </div>
             <h5 class="text-secondary">
-              <a href="javascript:">Forgot Password?</a>
+              <a href="javascript:">Olvidaste tu contraseña?</a>
             </h5>
           </div>
           <div class="d-grid mt-4">
-            <button type="button" class="btn btn-secondary">Sign In</button>
+            <button type="button" class="btn btn-secondary">Ingresar</button>
           </div>
           <hr />
           <h5 class="d-flex justify-content-center">
-            <a [routerLink]="['/guest/register']">Don't have an account?</a>
+            <a [routerLink]="['/guest/register']">Crea tu cuenta</a>
           </h5>
         </div>
       </div>
